force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Cart_Item__c/ASR_Cart_Item__c.object-meta.xml
<CustomObject>
    <description>Item in the Shopping Cart</description>
    <label>Cart Item</label>
    <pluralLabel>Cart Items</pluralLabel>
    <nameField>
        <label>Cart Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>ITEM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>