force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Cart_Item__c/fields/Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart__c</fullName>
    <label>Shopping Cart</label>
    <referenceTo>ASR_Shopping_Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>